@@ -1,3 +1,6 @@
+2002-11-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* actors.cc: fixed division by zero
+
 2002-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* shapes/font.cc: fixed hang in french BG
 
